--- a/myreactass/package.json
+++ b/myreactass/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.1.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "card-validator": "^8.1.1",
+    "final-form": "^4.20.7",
+    "framer-motion": "^6.3.4",
     "json-server": "^0.17.0",
     "nanoid": "^3.3.4",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-final-form": "^6.5.9",
+    "react-scripts": "^5.0.1",
+    "style-components": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
