--- a/myreactass/package.json
+++ b/myreactass/package.json
@@ -13,15 +13,19 @@
     "card-validator": "^8.1.1",
     "final-form": "^4.20.7",
     "framer-motion": "^6.3.4",
+    "heroku": "^7.60.2",
     "json-server": "^0.17.0",
     "nanoid": "^3.3.4",
+    "netlify-cli": "^10.4.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.1.0",
     "react-final-form": "^6.5.9",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "style-components": "^0.1.0",
+    "vercel": "^25.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
