--- a/myreactass/package.json
+++ b/myreactass/package.json
@@ -22,6 +22,7 @@
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.1.0",
     "react-final-form": "^6.5.9",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "style-components": "^0.1.0",
@@ -29,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3030 react-scripts start",
+    "start": "PORT=3031 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
