--- a/myreactass/package.json
+++ b/myreactass/package.json
@@ -23,14 +23,15 @@
     "react-dom": "^18.1.0",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "style-components": "^0.1.0",
+    "redux": "^4.2.0",
     "vercel": "^25.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3031 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
